--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MiniTwitter</string>
     <string name="keywordsHint">keywords</string>
+    <string name="com.twitter.sdk.android.CONSUMER_KEY">6Hw3rFghxoQLVDBHjN183ovLI</string>
+    <string name="com.twitter.sdk.android.CONSUMER_SECRET">4V0hGqZVPc4Oge8eFDMGphjuWY8TPZ2CzBTlFQ4NhrgjkMhJlc</string>
 </resources>
